# agentX

./: .gitignore  agentx.toml  pyproject.toml
src/agentx/: config.py  context.py  file_explorer.py  history.py  layout.py  main.py  message.py  ollama_client.py  session.py
src/agentx.egg-info/: PKG-INFO  SOURCES.txt
src/agentx/fonts/: LICENSE.txt
